--- a/references.bib
+++ b/references.bib
@@ -15,3 +15,12 @@
   edition   = {3rd ed},
   address   = {Melbourne, Australia}
 }
+
+@misc{pedestrians,
+  author = {{City of Melbourne}},
+  url = "https://www.pedestrian.melbourne.vic.gov.au/",
+  note = "Accessed 5 January 2024",
+  year = 2024,
+  title = {Pedestrian counting system},
+  address = {Melbourne, Australia}
+}
