--- a/fits.qmd
+++ b/fits.qmd
@@ -211,7 +211,35 @@ tar_read(walkers_plot)
 
 We have also shown the periods of lockdown due to COVID-19. In Melbourne, there were six separate lockdowns ranging from `r as.numeric(min(lockdowns$Duration))` days to `r as.numeric(max(lockdowns$Duration))` days in length. The first official lockdown period was from 31 March 2020 to `r format(min(lockdowns$End), "%d %b %Y")`, and the last lockdown was from `r format(max(lockdowns$Start), "%d %b %Y")` to `r format(max(lockdowns$End), "%d %b %Y")`. However, the first period was preceded by over a week when most people elected to stay and work at home, so we have chosen to start the first period on `r format(min(lockdowns$Start), "%d %b %Y")`, to better reflect human behaviour. Otherwise, we have used the official lockdown dates.
 
-We apply the four solutions discussed in @sec-methods. We fit ETS, ARIMA and dynamic ARIMA models to the data, with no transformations used. We have evaluated the methods by using time series cross-validation, with the initial training set comprising the whole of 2019, and subsequent training sets growing by 1 week at a time, to the end of 2021. The test sets are always 3 weeks long. Thus, we have evaluated the forecasts during 2020 and 2021, covering all lockdown periods, and the start of the recovery period. The results are shown in @fig-walkers-plot1.
+We apply the four solutions discussed in @sec-methods. We fit ARIMA and dynamic ARIMA models to the data, with no transformations used. We have evaluated the methods by using time series cross-validation, with the initial training set comprising the whole of 2019, and subsequent training sets growing by 1 week at a time, to the end of 2021. The test sets are always 3 weeks long. Thus, we have evaluated the forecasts during 2020 and 2021, covering all lockdown periods, and the start of the recovery period. The results are shown in Figures [-@fig-walkers-plot1]--[-@fit-walkers-plot4]
+
+```{r}
+#| label: fig-walkers-plot1
+#| fig-height: 3
+#| fig-cap: "Solution 1: the forecasts do not take into account the lockdown periods, but the ARIMA model is able to adjust to the changing level of the series."
+tar_read(walkers_plot1)
+```
+
+```{r}
+#| label: fig-walkers-plot2
+#| fig-height: 3
+#| fig-cap: "Solution 2: the forecasts are based on an ARIMA model with a dummy variable indicating when the lockdown periods occurred."
+tar_read(walkers_plot2)
+```
+
+```{r}
+#| label: fig-walkers-plot3
+#| fig-height: 3
+#| fig-cap: "Solution 3: the lockdown periods are set to missing, and the ARIMA model uses the remaining data to produce forecasts"
+tar_read(walkers_plot3)
+```
+
+```{r}
+#| label: fig-walkers-plot4
+#| fig-height: 3
+#| fig-cap: "Solution 4: the lockdown periods are replaced with estimated counts based on an ARIMA model applied to the remaining data. Then a new ARIMA model is fitted to the whole data set, and used to produce forecasts."
+tar_read(walkers_plot4)
+```
 
 
 ## Example: Ambulance attendances
